Fixed the host name alignment issue (#2439)

--- a/investigate-hosts/app/styles/investigate-hosts/components/host-detail/header.scss
+++ b/investigate-hosts/app/styles/investigate-hosts/components/host-detail/header.scss
@@ -125,7 +125,8 @@
       .host-name {
         overflow: hidden;
         text-overflow: ellipsis;
-        max-width: 80%;
+        max-width: 250px;
+        white-space: nowrap;
       }
 
     }
